[build-system]
requires = ["setuptools>=61.0", "humps", "pymongo", "aiohttp", "sqlalchemy",
    "asyncio", "selenium", "webdriver_manager", "numpy", "faker", "psycopg2"]
build-backend = "setuptools.build_meta"

[project]
name = "lighttest_basic"
version = "0.9.4"
authors = [
    { name = "David Toth", email = "tothlldavid@gmail.com" },
]
description = "the basic version of lighttest"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"